Archive2/b6/5ea7fb3b6de1ef/output
main.cpp:47:9: error: stray '@' in program
         @1 (on a 19 long sentence)
         ^
main.cpp:48:12: warning: missing terminating ' character
         let's make a DummyRule out of: 0 and 2
            ^
main.cpp:48:9: error: missing terminating ' character
         let's make a DummyRule out of: 0 and 2
         ^
main.cpp:50:12: warning: missing terminating ' character
         let's now make a Rule
            ^
main.cpp:50:9: error: missing terminating ' character
         let's now make a Rule
         ^
main.cpp:52:12: warning: missing terminating ' character
         Let's push back (result.size() = 0)
            ^
main.cpp:52:9: error: missing terminating ' character
         Let's push back (result.size() = 0)
         ^
main.cpp:55:52: warning: missing terminating ' character
         for the record, the next word is: "dogs". I'm starting from there to fin
                                                    ^
main.cpp:55:9: error: missing terminating ' character
         for the record, the next word is: "dogs". I'm starting from there to fin
         ^
main.cpp:58:9: error: stray '@' in program
         @5 (on a 19 long sentence)
         ^
main.cpp:59:12: warning: missing terminating ' character
         let's make a DummyRule out of: 4 and 6
            ^
main.cpp:59:9: error: missing terminating ' character
         let's make a DummyRule out of: 4 and 6
         ^
main.cpp:61:12: warning: missing terminating ' character
         let's now make a Rule
            ^
main.cpp:61:9: error: missing terminating ' character
         let's now make a Rule
         ^
main.cpp:63:12: warning: missing terminating ' character
         Let's push back (result.size() = 1)
            ^
main.cpp:63:9: error: missing terminating ' character
         Let's push back (result.size() = 1)
         ^
main.cpp:6:24: error: 'Rule' was not declared in this scope
     static std::vector<Rule<SentenceContainerType>> computeMatches(const SentenceContainerType& sentence){
                        ^
main.cpp:6:29: error: template argument 1 is invalid
     static std::vector<Rule<SentenceContainerType>> computeMatches(const SentenceContainerType& sentence){
                             ^
main.cpp:6:29: error: template argument 2 is invalid
main.cpp:6:50: error: expected unqualified-id before '>' token
     static std::vector<Rule<SentenceContainerType>> computeMatches(const SentenceContainerType& sentence){
                                                  ^
main.cpp:42:1: error: expected unqualified-id before '[' token
 [==========] Running 1 test from 1 test case.
 ^
